kubernetes-manifests/argocd/disable-components-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
$patch: delete
