kubernetes-manifests/argocd/argocd-server-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8083"
    prometheus.io/path: "/metrics"
spec:
  ports:
    - name: metrics
      port: 8083
      targetPort: 8083
