kubernetes-manifests/argocd/argocd-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.50
