kubernetes-manifests/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: argocd.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`argocd.dtlp.cc`)
      services:
        - name: argocd-server
          kind: Service
          port: 80
  tls: {}
